bubbles-frontend/src/main/argorollouts/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bubblefrontend
    version: v1
  name: bubblefrontend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bubblefrontend
      version: v1
  template:
    metadata:
      labels:
        app: bubblefrontend
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: bubblefrontend
        image: quay.io/rhdevelopers/bubble-frontend:v1.0-ar
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        securityContext:
          privileged: false
      serviceAccount: bubblefrontend
