bubbles-frontend/src/main/argorollouts/Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bubble-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    istio: app-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bubble-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
  - "*"
  gateways:
  - bubble-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: bubble-frontend
        port:
          number: 8080
